--- a/index.html
+++ b/index.html
@@ -1,169 +1,188 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Emoji Game Hub 🚘🧩</title>
+<title>🚘 Beta Games – Crazy Cars 3D</title>
 <style>
-  body { margin:0; font-family: Arial; background:#87ceeb; }
-  canvas { display:block; margin:auto; border:3px solid black; background:#7cfc00; }
-  h1,h2{text-align:center; color:#333;}
-  .menu, .category, .game { display:none; text-align:center; padding:10px; }
-  .menu button, .category button, .game button { padding:10px 20px; margin:5px; font-size:16px; cursor:pointer; }
+body { margin:0; overflow:hidden; background:black; font-family:Arial; }
+#ui {
+ position:absolute;
+ top:10px; left:10px;
+ color:white;
+ z-index:10;
+ background:rgba(0,0,0,0.6);
+ padding:10px;
+ border-radius:10px;
+}
+button { font-size:16px; margin:2px; cursor:pointer; }
 </style>
 </head>
 <body>
 
-<h1>Emoji Game Hub 🚘🧩</h1>
-
-<!-- Main Menu -->
-<div id="mainMenu" class="menu" style="display:block;">
-  <h2>Select Category</h2>
-  <button onclick="openCategory('cityGame')">City & Car 🚘</button>
-  <button onclick="openCategory('boardGame')">Board Game Stations ♟️🧩</button>
-  <button onclick="openCategory('mazeGame')">Maze Game 🧩</button>
+<div id="ui">
+🚗 Select Car:
+<button onclick="selectCar('🚗')">🚗</button>
+<button onclick="selectCar('🚕')">🚕</button>
+<button onclick="selectCar('🚙')">🚙</button>
+<button onclick="selectCar('🚐')">🚐</button>
+<button onclick="selectCar('🚚')">🚚</button>
+<button onclick="selectCar('🚜')">🚜</button>
+<br><br>
+🎮 Controls: WASD / Arrow Keys  
+<br>🚓 Survive police for 30 seconds!
 </div>
 
-<!-- City Game -->
-<div id="cityGame" class="category">
-  <h2>City Map 🚘</h2>
-  <canvas id="cityCanvas" width="800" height="600"></canvas>
-  <button onclick="backToMenu('cityGame')">Back to Main Menu</button>
-</div>
-
-<!-- Board Game Stations -->
-<div id="boardGame" class="category">
-  <h2>Board Game Stations ♟️🧩</h2>
-  <p>Choose a station to play:</p>
-  <button onclick="alert('Chess Station: Coming Soon!')">Chess ♟️</button>
-  <button onclick="alert('Checkers Station: Coming Soon!')">Checkers 🔵</button>
-  <button onclick="alert('Snakes & Ladders Station: Coming Soon!')">Snakes & Ladders 🐍🪜</button>
-  <button onclick="alert('Ludo Station: Coming Soon!')">Ludo 🎲</button>
-  <button onclick="backToMenu('boardGame')">Back to Main Menu</button>
-</div>
-
-<!-- Maze Game -->
-<div id="mazeGame" class="category">
-  <h2>Maze Game 🧩</h2>
-  <canvas id="mazeCanvas" width="600" height="600"></canvas>
-  <button onclick="backToMenu('mazeGame')">Back to Main Menu</button>
-</div>
+<script src="https://cdn.jsdelivr.net/npm/three@0.157/build/three.min.js"></script>
 
 <script>
-// ---------- Menu Navigation ----------
-function openCategory(id){
-  document.getElementById('mainMenu').style.display='none';
-  document.getElementById(id).style.display='block';
-  if(id==='cityGame') cityInit();
-  if(id==='mazeGame') mazeInit();
-}
-function backToMenu(id){
-  document.getElementById(id).style.display='none';
-  document.getElementById('mainMenu').style.display='block';
-}
+let scene, camera, renderer;
+let car, carEmoji="🚗";
+let speed=0, turn=0;
+let policeCars=[];
+let chaseTimer=0;
+let policeActive=false;
 
-// ---------- City & Car Game ----------
-let cityCanvas, cityCtx, playerCar, cityKeys;
-function cityInit(){
-  cityCanvas = document.getElementById('cityCanvas');
-  cityCtx = cityCanvas.getContext('2d');
-  playerCar = {x:400,y:500,emoji:"🚘"};
-  cityKeys={};
-  document.addEventListener('keydown',e=>cityKeys[e.key]=true);
-  document.addEventListener('keyup',e=>cityKeys[e.key]=false);
-  cityLoop();
-}
+init();
+animate();
 
-function cityUpdate(){
-  if(cityKeys["ArrowUp"]) playerCar.y-=5;
-  if(cityKeys["ArrowDown"]) playerCar.y+=5;
-  if(cityKeys["ArrowLeft"]) playerCar.x-=5;
-  if(cityKeys["ArrowRight"]) playerCar.x+=5;
-  // Keep in bounds
-  playerCar.x=Math.max(0,Math.min(cityCanvas.width-40,playerCar.x));
-  playerCar.y=Math.max(0,Math.min(cityCanvas.height-40,playerCar.y));
-}
+function init(){
+ scene = new THREE.Scene();
+ scene.background = new THREE.Color(0x87ceeb);
 
-function cityDraw(){
-  cityCtx.clearRect(0,0,cityCanvas.width,cityCanvas.height);
-  // Roads
-  cityCtx.fillStyle="#555";
-  cityCtx.fillRect(100,0,200,cityCanvas.height);
-  cityCtx.fillRect(500,0,200,cityCanvas.height);
-  // Skyscrapers 🏙️
-  for(let i=0;i<5;i++){
-    cityCtx.fillStyle="#333";
-    cityCtx.fillRect(i*150+50,50,80,200);
-    cityCtx.font="30px Arial";
-    cityCtx.fillText("🏙️",i*150+50,40);
-  }
-  // Board Game Stations
-  cityCtx.fillStyle="orange";
-  cityCtx.font="30px Arial";
-  cityCtx.fillText("♟️ Chess",150,550);
-  cityCtx.fillText("🔵 Checkers",550,550);
-  // Player Car
-  cityCtx.fillText(playerCar.emoji,playerCar.x,playerCar.y);
+ camera = new THREE.PerspectiveCamera(75,window.innerWidth/window.innerHeight,0.1,1000);
+ camera.position.set(0,6,10);
+
+ renderer = new THREE.WebGLRenderer({antialias:true});
+ renderer.setSize(window.innerWidth,window.innerHeight);
+ document.body.appendChild(renderer.domElement);
+
+ // Lights
+ scene.add(new THREE.AmbientLight(0xffffff,0.5));
+ const sun = new THREE.DirectionalLight(0xffffff,1);
+ sun.position.set(10,20,10);
+ scene.add(sun);
+
+ // Ground
+ const ground = new THREE.Mesh(
+   new THREE.PlaneGeometry(500,500),
+   new THREE.MeshStandardMaterial({color:0x444444})
+ );
+ ground.rotation.x = -Math.PI/2;
+ scene.add(ground);
+
+ createCity();
+ createCar();
+ spawnPolice();
+
+ window.addEventListener("resize", ()=>{
+  camera.aspect = window.innerWidth/window.innerHeight;
+  camera.updateProjectionMatrix();
+  renderer.setSize(window.innerWidth,window.innerHeight);
+ });
 }
 
-function cityLoop(){ cityUpdate(); cityDraw(); requestAnimationFrame(cityLoop); }
-
-// ---------- Maze Game ----------
-let mazeCanvas, mazeCtx, mazePlayer, mazeLevel, mazeGrid;
-const cellSize=40, gridSize=15;
-
-function mazeInit(){
-  mazeCanvas = document.getElementById('mazeCanvas');
-  mazeCtx = mazeCanvas.getContext('2d');
-  mazeLevel=1;
-  startMazeLevel();
-  document.addEventListener('keydown', mazeKeyHandler);
+function createCity(){
+ for(let i=0;i<40;i++){
+   const h = Math.random()*20+5;
+   const building = new THREE.Mesh(
+     new THREE.BoxGeometry(5,h,5),
+     new THREE.MeshStandardMaterial({color:0x666666})
+   );
+   building.position.set(
+     (Math.random()-0.5)*200,
+     h/2,
+     (Math.random()-0.5)*200
+   );
+   scene.add(building);
+ }
 }
 
-function startMazeLevel(){
-  mazeGrid=[];
-  for(let y=0;y<gridSize;y++){
-    let row=[];
-    for(let x=0;x<gridSize;x++){
-      if(Math.random()<0.2 + mazeLevel*0.02) row.push(1); else row.push(0);
-    }
-    mazeGrid.push(row);
-  }
-  mazePlayer={x:0,y:0};
-  mazeGrid[0][0]=0; mazeGrid[gridSize-1][gridSize-1]=0;
-  mazeDraw();
+function createCar(){
+ const geo = new THREE.BoxGeometry(2,1,4);
+ const mat = new THREE.MeshStandardMaterial({color:0xff0000});
+ car = new THREE.Mesh(geo,mat);
+ car.position.y=0.5;
+ scene.add(car);
 }
 
-function mazeKeyHandler(e){
-  let nx=mazePlayer.x, ny=mazePlayer.y;
-  if(e.key==="ArrowUp") ny--;
-  if(e.key==="ArrowDown") ny++;
-  if(e.key==="ArrowLeft") nx--;
-  if(e.key==="ArrowRight") nx++;
-  if(nx>=0&&nx<gridSize&&ny>=0&&ny<gridSize&&mazeGrid[ny][nx]===0){
-    mazePlayer.x=nx; mazePlayer.y=ny;
-  }
-  mazeDraw();
-  if(mazePlayer.x===gridSize-1 && mazePlayer.y===gridSize-1){
-    mazeLevel++;
-    if(mazeLevel>10) { alert("You completed all 10 levels!"); mazeLevel=1; }
-    startMazeLevel();
-  }
+function selectCar(emoji){
+ carEmoji = emoji;
+ alert("Selected car: "+emoji);
 }
 
-function mazeDraw(){
-  mazeCtx.clearRect(0,0,mazeCanvas.width,mazeCanvas.height);
-  for(let y=0;y<gridSize;y++){
-    for(let x=0;x<gridSize;x++){
-      if(mazeGrid[y][x]===1){
-        mazeCtx.fillStyle="#333"; mazeCtx.fillRect(x*cellSize,y*cellSize,cellSize,cellSize);
-      }
-    }
-  }
-  mazeCtx.fillStyle="yellow";
-  mazeCtx.fillRect(mazePlayer.x*cellSize,mazePlayer.y*cellSize,cellSize,cellSize);
+function spawnPolice(){
+ policeCars=[];
+ let count = Math.floor(Math.random()*4)+1;
+
+ for(let i=0;i<count;i++){
+  const p = new THREE.Mesh(
+    new THREE.BoxGeometry(2,1,4),
+    new THREE.MeshStandardMaterial({color:0x0000ff})
+  );
+  p.position.set((Math.random()-0.5)*80,0.5,(Math.random()-0.5)*80);
+  scene.add(p);
+  policeCars.push(p);
+ }
+
+ chaseTimer = 0;
+ policeActive=true;
+}
+
+document.addEventListener("keydown",e=>{
+ if(e.key=="ArrowUp"||e.key=="w") speed=0.5;
+ if(e.key=="ArrowDown"||e.key=="s") speed=-0.3;
+ if(e.key=="ArrowLeft"||e.key=="a") turn=0.05;
+ if(e.key=="ArrowRight"||e.key=="d") turn=-0.05;
+});
+document.addEventListener("keyup",()=>{speed=0;turn=0;});
+
+function animate(){
+ requestAnimationFrame(animate);
+
+ car.rotation.y += turn;
+ car.translateZ(speed);
+
+ // Camera follow
+ camera.position.lerp(
+   new THREE.Vector3(
+     car.position.x+Math.sin(car.rotation.y)*10,
+     6,
+     car.position.z+Math.cos(car.rotation.y)*10
+   ),0.1
+ );
+ camera.lookAt(car.position);
+
+ updatePolice();
+
+ renderer.render(scene,camera);
+}
+
+function updatePolice(){
+ if(!policeActive) return;
+
+ chaseTimer += 0.016;
+
+ policeCars.forEach(p=>{
+   const dir = new THREE.Vector3().subVectors(car.position,p.position).normalize();
+   p.position.add(dir.multiplyScalar(0.15));
+   p.lookAt(car.position);
+
+   // Collision
+   if(p.position.distanceTo(car.position)<2){
+     alert("🚓 You got caught! Restarting...");
+     location.reload();
+   }
+ });
+
+ // Police leave after 30 seconds
+ if(chaseTimer>30){
+   policeCars.forEach(p=>scene.remove(p));
+   policeCars=[];
+   policeActive=false;
+
+   setTimeout(spawnPolice,5000); // respawn later
+ }
 }
 </script>
-
 </body>
 </html>
