--- a/index.html
+++ b/index.html
@@ -1,50 +1,50 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>🚘 Beta Games – Crazy Cars 3D</title>
+<title>🚘 Beta Games 3D Hub</title>
 <style>
 body { margin:0; overflow:hidden; background:black; font-family:Arial; }
-#ui {
- position:absolute;
- top:10px; left:10px;
- color:white;
- z-index:10;
- background:rgba(0,0,0,0.6);
- padding:10px;
- border-radius:10px;
-}
+#ui { position:absolute; top:10px; left:10px; color:white; z-index:10;
+     background:rgba(0,0,0,0.6); padding:10px; border-radius:10px; }
 button { font-size:16px; margin:2px; cursor:pointer; }
+#gameText { position:absolute; bottom:10px; left:10px; color:white; font-size:20px; z-index:10; }
 </style>
 </head>
 <body>
 
 <div id="ui">
-🚗 Select Car:
-<button onclick="selectCar('🚗')">🚗</button>
-<button onclick="selectCar('🚕')">🚕</button>
-<button onclick="selectCar('🚙')">🚙</button>
-<button onclick="selectCar('🚐')">🚐</button>
-<button onclick="selectCar('🚚')">🚚</button>
-<button onclick="selectCar('🚜')">🚜</button>
+<select id="vehicleSelect">
+<option value="car">🚗 Car</option>
+<option value="plane">✈️ Plane</option>
+<option value="rocket">🚀 Rocket</option>
+</select>
+<button onclick="switchVehicle()">Switch Vehicle</button>
+<button onclick="goMaze()">🧩 Maze</button>
+<button onclick="goBoard()">♟️ Board Games</button>
+<button onclick="goStage()">🎸 Rock Stage</button>
+<button onclick="backHub()">🏙️ Back to Hub</button>
 <br><br>
-🎮 Controls: WASD / Arrow Keys  
-<br>🚓 Survive police for 30 seconds!
+Controls: WASD / Arrow Keys
 </div>
+<div id="gameText"></div>
 
 <script src="https://cdn.jsdelivr.net/npm/three@0.157/build/three.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/three@0.157/examples/js/controls/PointerLockControls.js"></script>
 
 <script>
+
+// --- CORE THREE.JS SETUP ---
 let scene, camera, renderer;
-let car, carEmoji="🚗";
-let speed=0, turn=0;
-let policeCars=[];
-let chaseTimer=0;
-let policeActive=false;
+let vehicle, vehicleType="car", speed=0, turn=0;
+let policeCars=[], policeActive=false, chaseTimer=0;
+let clock=new THREE.Clock();
+let objects = [];
 
 init();
 animate();
 
+// --- INIT FUNCTION ---
 function init(){
  scene = new THREE.Scene();
  scene.background = new THREE.Color(0x87ceeb);
@@ -71,16 +71,26 @@ function init(){
  scene.add(ground);
 
  createCity();
- createCar();
+ createVehicle("car");
  spawnPolice();
 
+ // Keyboard controls
+ document.addEventListener("keydown", e=>{switch(e.code){
+   case "ArrowUp": case "KeyW": speed=0.5; break;
+   case "ArrowDown": case "KeyS": speed=-0.3; break;
+   case "ArrowLeft": case "KeyA": turn=0.05; break;
+   case "ArrowRight": case "KeyD": turn=-0.05; break;
+ }});
+ document.addEventListener("keyup",()=>{speed=0;turn=0;});
+
  window.addEventListener("resize", ()=>{
-  camera.aspect = window.innerWidth/window.innerHeight;
-  camera.updateProjectionMatrix();
-  renderer.setSize(window.innerWidth,window.innerHeight);
+   camera.aspect=window.innerWidth/window.innerHeight;
+   camera.updateProjectionMatrix();
+   renderer.setSize(window.innerWidth,window.innerHeight);
  });
 }
 
+// --- CREATE CITY ---
 function createCity(){
  for(let i=0;i<40;i++){
    const h = Math.random()*20+5;
@@ -88,101 +98,95 @@ function createCity(){
      new THREE.BoxGeometry(5,h,5),
      new THREE.MeshStandardMaterial({color:0x666666})
    );
-   building.position.set(
-     (Math.random()-0.5)*200,
-     h/2,
-     (Math.random()-0.5)*200
-   );
+   building.position.set((Math.random()-0.5)*200,h/2,(Math.random()-0.5)*200);
    scene.add(building);
+   objects.push(building);
  }
 }
 
-function createCar(){
- const geo = new THREE.BoxGeometry(2,1,4);
- const mat = new THREE.MeshStandardMaterial({color:0xff0000});
- car = new THREE.Mesh(geo,mat);
- car.position.y=0.5;
- scene.add(car);
+// --- VEHICLE CREATION ---
+function createVehicle(type){
+ if(vehicle) scene.remove(vehicle);
+ let geo = new THREE.BoxGeometry(2,1,4);
+ let mat = new THREE.MeshStandardMaterial({color:0xff0000});
+ if(type=="plane") geo = new THREE.BoxGeometry(3,1,6);
+ if(type=="rocket") geo = new THREE.CylinderGeometry(0.5,0.5,6,32);
+ vehicle = new THREE.Mesh(geo,mat);
+ vehicle.position.y=0.5;
+ scene.add(vehicle);
+ vehicleType = type;
 }
 
-function selectCar(emoji){
- carEmoji = emoji;
- alert("Selected car: "+emoji);
+// --- VEHICLE SWITCH ---
+function switchVehicle(){
+ const select=document.getElementById("vehicleSelect");
+ createVehicle(select.value);
 }
 
+// --- POLICE SPAWN & CHASE ---
 function spawnPolice(){
- policeCars=[];
- let count = Math.floor(Math.random()*4)+1;
-
+ policeCars=[]; let count=Math.floor(Math.random()*4)+1;
  for(let i=0;i<count;i++){
-  const p = new THREE.Mesh(
-    new THREE.BoxGeometry(2,1,4),
-    new THREE.MeshStandardMaterial({color:0x0000ff})
-  );
-  p.position.set((Math.random()-0.5)*80,0.5,(Math.random()-0.5)*80);
-  scene.add(p);
-  policeCars.push(p);
+   const p = new THREE.Mesh(
+     new THREE.BoxGeometry(2,1,4),
+     new THREE.MeshStandardMaterial({color:0x0000ff})
+   );
+   p.position.set((Math.random()-0.5)*80,0.5,(Math.random()-0.5)*80);
+   scene.add(p);
+   policeCars.push(p);
  }
-
- chaseTimer = 0;
- policeActive=true;
+ chaseTimer=0; policeActive=true;
 }
 
-document.addEventListener("keydown",e=>{
- if(e.key=="ArrowUp"||e.key=="w") speed=0.5;
- if(e.key=="ArrowDown"||e.key=="s") speed=-0.3;
- if(e.key=="ArrowLeft"||e.key=="a") turn=0.05;
- if(e.key=="ArrowRight"||e.key=="d") turn=-0.05;
-});
-document.addEventListener("keyup",()=>{speed=0;turn=0;});
-
+// --- ANIMATE ---
 function animate(){
  requestAnimationFrame(animate);
+ let delta = clock.getDelta();
 
- car.rotation.y += turn;
- car.translateZ(speed);
+ vehicle.rotation.y += turn;
+ vehicle.translateZ(speed);
 
  // Camera follow
  camera.position.lerp(
    new THREE.Vector3(
-     car.position.x+Math.sin(car.rotation.y)*10,
+     vehicle.position.x+Math.sin(vehicle.rotation.y)*10,
      6,
-     car.position.z+Math.cos(car.rotation.y)*10
+     vehicle.position.z+Math.cos(vehicle.rotation.y)*10
    ),0.1
  );
- camera.lookAt(car.position);
+ camera.lookAt(vehicle.position);
 
  updatePolice();
-
  renderer.render(scene,camera);
 }
 
+// --- UPDATE POLICE ---
 function updatePolice(){
  if(!policeActive) return;
-
  chaseTimer += 0.016;
-
  policeCars.forEach(p=>{
-   const dir = new THREE.Vector3().subVectors(car.position,p.position).normalize();
+   const dir=new THREE.Vector3().subVectors(vehicle.position,p.position).normalize();
    p.position.add(dir.multiplyScalar(0.15));
-   p.lookAt(car.position);
-
-   // Collision
-   if(p.position.distanceTo(car.position)<2){
+   p.lookAt(vehicle.position);
+   if(p.position.distanceTo(vehicle.position)<2){
      alert("🚓 You got caught! Restarting...");
      location.reload();
    }
  });
-
- // Police leave after 30 seconds
  if(chaseTimer>30){
    policeCars.forEach(p=>scene.remove(p));
    policeCars=[];
    policeActive=false;
-
-   setTimeout(spawnPolice,5000); // respawn later
+   setTimeout(spawnPolice,5000);
  }
 }
+
+// --- HUB STATIONS ---
+function goMaze(){document.getElementById("gameText").innerText="🧩 Entering Maze... (placeholder)";}
+function goBoard(){document.getElementById("gameText").innerText="♟️ Entering Board Games... (placeholder)";}
+function goStage(){document.getElementById("gameText").innerText="🎸 Entering Rock Stage... AI drums/piano sing now!";}
+function backHub(){document.getElementById("gameText").innerText="🏙️ Back to Hub";}
+
 </script>
 </body>
 </html>
